# block_platform

./: README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
application/: alembic.ini  main.py
application/api/v1/handlers/: auth.py
application/core/: config.py
application/db/postgres/: db.py
application/migration/: env.py
application/migration/versions/: ac92a0222a93_initial.py
application/models/: post.py  user.py
application/schemas/: user.py
application/services/: auth.py
