[tool.poetry]
name = "block-platform"
version = "0.1.0"
description = ""
authors = ["Александр Титов <avtitov@hex.team>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.7"
sqlalchemy = "^2.0.37"
pydantic-settings = "^2.7.1"
uvicorn = "^0.34.0"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
pydantic = "^2.10.6"
isort = "^5.13.2"
werkzeug = "^3.1.3"
async-fastapi-jwt-auth = "^0.6.6"
alembic = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
